packages/preview/touying-pres-ustc/0.2.0/README.md
# touying-pres-ustc 中国科学技术大学touying演示模板

**www.中国科学技术大学.com**

```typ
#import "@preview/touying-pres-ustc:0.2.0": *

#let s = register(aspect-ratio: "16-9")
#let s = (s.methods.numbering)(self: s, section: "1.", "1.1")
#let s = (s.methods.info)(
  self: s,
  title: [Typst template for School of Computer Science and Technology, USTC],
  subtitle: [Continuously Improving...],
  author: [Quaternijkon],
  date: datetime.today(),
  institution: [School of Computer Science and Technology, USTC],
  logo: image("../../assets/img/USTC.svg", width: 50%),
  github: []
)

#let (init, slides) = utils.methods(s)
#let (slide, empty-slide, title-slide, outline-slide, new-section-slide, ending-slide, focus-slide,matrix-slide) = utils.slides(s)

#show: codly-init.with()
#show: init
#show: slides.with()

#outline-slide()



= Section

== Page
```

## 省流版

为了降低新手上路的代码分析成本以及降低项目的耦合性，特将项目拆分成多个typ文件，请按以下步骤了解：

`main.typ`是渲染的入口，新手上路直接从这里开始。//第一步

`main.typ`中导入了`config.typ`，这是配置文件，封面的标题，副标题，作者等信息在这里修改，其他你无须烦恼。//第二步

`config.typ`中导入了`theme.typ`和`lib.typ`，新手上路可以暂时跳过。

- `theme.typ`相当于`CSS`,控制着模板长什么样，如果你对模板的样式不满意，包括字体，图片素材，跳转功能，或者改成其他学校的主题，在这里修改成你希望的样子。学习曲线较陡峭，初学者无需关心，
- `lib.typ`中是第三方包和自定义函数，当模板中的包不能满足你的需求，或者想自定义一些常用函数，请把它们放在这里以保持项目的结构性和低耦合。

`content.typ`这是你放实际内容的地方，一级标题是大纲，二级标题是当页的标题，之后的n级标题都在页内作为内容显示，无特殊地位。//第三步


## 文件说明

- `assets`: 模板资源文件
    -   `img`: 模板图片文件

- `template`: 可复用组件
    - []

- `config.typ`  : 配置文件，包括封面的信息在这里。
- `content.typ` : 只需在此处添加内容
- `lib.typ`     : 库文件，导入第三方库请在这导入
- `main.typ`    : 编译入口，导入第三方库时有可能需要把`#show`放在此处
- `theme.typ`   : 主题文件，可自行修改样式

## 使用方法

1.  vscode下载插件`Typst LSP`,`Tinymist Typst`,`Typst Sync`。
2.  打开本项目，在`main.typ`中点击`preview`。若在`content.typ`中点击`preview`，则预览类似`markdown`的文档排版。

## 注意事项

1. 在使用时，`config.typ` 应作为顶层文件被其他文件导入，避免交叉导入。

## 自定义模板

1. 

## Change log

### 0.2.0

修改文件组织结构
